-
Bug
-
Resolution: Done
-
P2: Important
-
5.5.1, 5.6
-
Windows 7, Linux (Ubuntu 14.04)
-
5c7f000cd4c9e3769e8cd4085cf0beee104f9886
We have a QMainWindow with QMDIArea as a central widget, and the MDI Area contains QOpenGLWidget subwindow. The QMainWindow has also a dock widget. Now, the QOpenGLWidget is unnecessarily repainted several times when the dock widget is docked or undocked. Also, an unnecessary repaint happens when the status bar of QMainWindow is updated.
These repaints don't happen if we use (obsolete) QGLWidget instead. And I was told this is not reproducible on OS X.
See the attached example. Simply dock and undock the dock widget (located at the bottom) and the debug output is flooded with the QOpenGLWidget::paintEvent() calls.
- resulted in
-
QTBUG-52419 Regression: QGraphicsView using QOpenGLWidget as viewport not updated correctly
-
- Closed
-
| For Gerrit Dashboard: QTBUG-49466 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 141307,4 | Reduce the number of paint events for QOpenGLWidget | 5.6 | qt/qtbase | Status: MERGED | -2 | 0 |
| 141370,2 | Send a paint after resize correctly from QOpenGLWidget | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |